--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,16 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
-    "@angular/cdk": "^15.0.0",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/animations": "~15.0.3",
+    "@angular/cdk": "~15.0.2",
+    "@angular/common": "~15.0.3",
+    "@angular/compiler": "~15.0.3",
+    "@angular/core": "~15.0.3",
+    "@angular/forms": "~15.0.3",
+    "@angular/material": "~15.0.2",
+    "@angular/platform-browser": "~15.0.3",
+    "@angular/platform-browser-dynamic": "~15.0.3",
+    "@angular/router": "~15.0.3",
     "big.js": "^6.2.1",
     "date-fns": "^2.29.3",
     "jwt-decode": "^3.1.2",
@@ -30,9 +30,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
+    "@angular-devkit/build-angular": "~15.0.3",
+    "@angular/cli": "~15.0.3",
+    "@angular/compiler-cli": "~15.0.3",
     "@types/big.js": "^6.1.6",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.8",
